cambio de venta a renta

--- a/www/detail.html
+++ b/www/detail.html
@@ -19,7 +19,7 @@
  </table>
   </h2>
   <h2 align = "center">
-    Carros en venta <br>(Precios en pesos mexicanos MXN)
+    Carros en renta <br>(Precios en pesos mexicanos MXN)
   </h2>
 </head>
 <body>
